<resources>
    <string name="app_name">PLC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="on">On</string>
    <string name="cancel">Cancel</string>
    <string name="off">Off</string>
    <string name="pond_lighting">Pond Lighting</string>
    <string name="lights_are">Lights are</string>
    <string name="empty_string">--</string>
    <string name="press_cancel_to_resume_the_schedule">- press cancel to resume the schedule</string>
    <string name="lorem_ipsum">empty string</string>
    <string name="resume_schedule">Resume schedule</string>
</resources>